added home components

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-card class="ion-text-center">
+  <!-- <ion-card class="ion-text-center">
     <img class="logo" src="assets/ngx-rocket-logo.png" alt="angular logo" />
     <ion-card-content>
       <ion-card-title>
@@ -18,5 +18,6 @@
         <q [hidden]="isLoading">{{ quote }}</q>
       </p>
     </ion-card-content>
-  </ion-card>
+  </ion-card> -->
+  <router-outlet></router-outlet>
 </ion-content>
