cleaned up modules

--- a/src/app/shell/shell.component.html
+++ b/src/app/shell/shell.component.html
@@ -69,35 +69,35 @@
         >
           <!-- <ion-list-header> Community Navigator </ion-list-header> -->
           <ion-menu-toggle auto-hide="false">
-            <ion-item [routerDirection]="'root'" routerLink="/community/people" routerLinkActive="selected">
+            <ion-item [routerDirection]="'root'" routerLink="/users" routerLinkActive="selected">
               <ion-icon slot="start" name="people-outline"></ion-icon>
-              <ion-label><span translate>People & Groups</span></ion-label>
+              <ion-label><span translate>Users</span></ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
-            <ion-item [routerDirection]="'root'" routerLink="/community/organizations" routerLinkActive="selected">
+            <ion-item [routerDirection]="'root'" routerLink="/providers" routerLinkActive="selected">
               <ion-icon slot="start" name="business-outline"></ion-icon>
-              <ion-label><span translate>Organizations & Services</span></ion-label>
+              <ion-label><span translate>Providers</span></ion-label>
             </ion-item>
           </ion-menu-toggle>
 
-          <ion-menu-toggle auto-hide="false">
+          <!-- <ion-menu-toggle auto-hide="false">
             <ion-item [routerDirection]="'root'" routerLink="/community/calendar" routerLinkActive="selected">
               <ion-icon slot="start" name="calendar-outline"></ion-icon>
               <ion-label><span translate>Community Calendar</span></ion-label>
             </ion-item>
-          </ion-menu-toggle>
+          </ion-menu-toggle> -->
 
-          <ion-menu-toggle auto-hide="false">
+          <!-- <ion-menu-toggle auto-hide="false">
             <ion-item [routerDirection]="'root'" routerLink="/community/forms" routerLinkActive="selected">
               <ion-icon slot="start" name="document-text-outline"></ion-icon>
               <ion-label><span translate>Forms & Templates</span></ion-label>
             </ion-item>
-          </ion-menu-toggle>
+          </ion-menu-toggle> -->
         </ion-list>
 
         <ion-list lines="none" class="ion-no-padding">
-          <ion-list-header> Options & more </ion-list-header>
+          <!-- <ion-list-header> Options & more </ion-list-header> -->
           <ion-menu-toggle auto-hide="false">
             <ion-item [routerDirection]="'root'" routerLink="/settings" routerLinkActive="selected">
               <ion-icon slot="start" name="settings-outline"></ion-icon>
