--- a/src/app/home/components/home-personal-information/home-personal-information.component.html
+++ b/src/app/home/components/home-personal-information/home-personal-information.component.html
@@ -1,1 +1,36 @@
-<p>home-personal-information works!</p>
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Provided Phone Number</ion-card-title>
+    </ion-card-header>
+    <ion-list> </ion-list>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Alternative Phone Numbers</ion-card-title>
+    </ion-card-header>
+    <ion-list> </ion-list>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Addresses</ion-card-title>
+    </ion-card-header>
+    <ion-list> </ion-list>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Aliases</ion-card-title>
+    </ion-card-header>
+    <ion-list> </ion-list>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Known Contacts</ion-card-title>
+    </ion-card-header>
+    <ion-list> </ion-list>
+  </ion-card>
+</ion-content>
