--- a/src/app/shell/shell.component.html
+++ b/src/app/shell/shell.component.html
@@ -69,9 +69,9 @@
         >
           <!-- <ion-list-header> Community Navigator </ion-list-header> -->
           <ion-menu-toggle auto-hide="false">
-            <ion-item [routerDirection]="'root'" routerLink="/users" routerLinkActive="selected">
+            <ion-item [routerDirection]="'root'" routerLink="/clients" routerLinkActive="selected">
               <ion-icon slot="start" name="people-outline"></ion-icon>
-              <ion-label><span translate>Users</span></ion-label>
+              <ion-label><span translate>Clients</span></ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
