--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -35,6 +35,10 @@
       <ion-item routerLink="/clients/details/{{ record._id }}">
         <ion-label>
           <h3>{{ record.first_name }} {{ record.last_name }}</h3>
+          <p>{{ record.assigned_cabin }}</p>
+        </ion-label>
+        <ion-label>
+          <p>{{ record.assigned_phone_number }}</p>
         </ion-label>
       </ion-item>
     </ion-item-sliding>
@@ -49,25 +53,42 @@
           </ion-buttons>
           <ion-title>Add Client</ion-title>
           <ion-buttons slot="end">
-            <ion-button (click)="confirm()" [strong]="true">Confirm</ion-button>
+            <ion-button (click)="create()" [strong]="true">Confirm</ion-button>
           </ion-buttons>
         </ion-toolbar>
       </ion-header>
       <ion-content class="ion-padding">
-        <ion-item>
-          <ion-label position="stacked">First Name</ion-label>
-          <ion-input type="text" placeholder="First Name" [(ngModel)]="name"></ion-input>
-        </ion-item>
+        <ion-list>
+          <ion-item>
+            <ion-label position="stacked">User Name</ion-label>
+            <ion-input type="text" placeholder="User Name" [(ngModel)]="record.email"></ion-input>
+          </ion-item>
 
-        <ion-item>
-          <ion-label position="stacked">Last Name</ion-label>
-          <ion-input type="text" placeholder="Last Name" [(ngModel)]="name"></ion-input>
-        </ion-item>
+          <ion-item>
+            <ion-label position="stacked">Password</ion-label>
+            <ion-input type="password" placeholder="Password" [(ngModel)]="record.password"></ion-input>
+          </ion-item>
 
-        <ion-item>
-          <ion-label position="stacked">Nick Name</ion-label>
-          <ion-input type="text" placeholder="Nick Name" [(ngModel)]="name"></ion-input>
-        </ion-item>
+          <ion-item>
+            <ion-label position="stacked">First Name</ion-label>
+            <ion-input type="text" placeholder="First Name" [(ngModel)]="record.first_name"></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-label position="stacked">Last Name</ion-label>
+            <ion-input type="text" placeholder="Last Name" [(ngModel)]="record.last_name"></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-label position="stacked">Nick Name</ion-label>
+            <ion-input type="text" placeholder="Nick Name" [(ngModel)]="record.nick_name"></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-label position="stacked">Birthday</ion-label>
+            <ion-input type="text" placeholder="Birthday" [(ngModel)]="record.date_of_birth"></ion-input>
+          </ion-item>
+        </ion-list>
       </ion-content>
     </ng-template>
   </ion-modal>
