--- a/src/app/home/components/home-medical/home-medical.component.html
+++ b/src/app/home/components/home-medical/home-medical.component.html
@@ -1,1 +1,8 @@
-<p>home-medical works!</p>
+<ion-card>
+  <ion-card-header>
+    <ion-card-title>Future feature placeholder</ion-card-title>
+  </ion-card-header>
+  <ion-card-content>
+    We did not have enough time to implement this feature due to the time contraints of the hackathon.
+  </ion-card-content>
+</ion-card>
