--- a/src/app/shell/shell.component.html
+++ b/src/app/shell/shell.component.html
@@ -44,9 +44,9 @@
           </ion-menu-toggle>
 
           <ion-menu-toggle auto-hide="false">
-            <ion-item [routerDirection]="'root'" routerLink="/goals" routerLinkActive="selected">
+            <ion-item [routerDirection]="'root'" routerLink="/tasks" routerLinkActive="selected">
               <ion-icon slot="start" name="folder-outline"></ion-icon>
-              <ion-label><span translate>Goals</span></ion-label>
+              <ion-label><span translate>Tasks</span></ion-label>
             </ion-item>
           </ion-menu-toggle>
 
