--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title><span translate>Calendar</span></ion-title>
+    <ion-title><span translate>Documents</span></ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
