--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,1 +1,18 @@
-<p>settings works!</p>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title><span translate>Settings</span></ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Future feature placeholder</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      We did not have enough time to implement this feature due to the time contraints of the hackathon.
+    </ion-card-content>
+  </ion-card>
+</ion-content>
