--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -3,6 +3,11 @@
     <ion-buttons *ngIf="!showSearchbar" slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
+    <ion-segment *ngIf="ios" [(ngModel)]="segment" (ionChange)="updateList()">
+      <ion-segment-button value="inbox"> Inbox </ion-segment-button>
+      <ion-segment-button value="sent"> Sent </ion-segment-button>
+      <ion-segment-button value="deleted"> Deleted </ion-segment-button>
+    </ion-segment>
     <ion-title *ngIf="!ios && !showSearchbar">Messages</ion-title>
     <ion-searchbar
       *ngIf="showSearchbar"
@@ -18,12 +23,19 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
+  <ion-toolbar *ngIf="!ios">
+    <ion-segment [(ngModel)]="segment" (ionChange)="updateList()">
+      <ion-segment-button value="inbox"> Inbox </ion-segment-button>
+      <ion-segment-button value="sent"> Sent </ion-segment-button>
+      <ion-segment-button value="deleted"> Deleted </ion-segment-button>
+    </ion-segment>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content fullscreen="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Clients</ion-title>
+      <ion-title size="large">Messages</ion-title>
     </ion-toolbar>
     <ion-toolbar>
       <ion-searchbar [(ngModel)]="queryText" (ionChange)="updateList()" placeholder="Search"></ion-searchbar>
@@ -31,15 +43,15 @@
   </ion-header>
 
   <ion-list #scheduleList *ngIf="records$ | async as records">
-    <ion-item-sliding *ngFor="let record of records" #slidingItem>
-      <ion-item routerLink="/clients/details/{{ record._id }}">
+    <ion-item-sliding *ngFor="let record of messageGroups" #slidingItem>
+      <ion-item routerLink="/messages/details/{{ record._id }}">
         <ion-label>
-          <h3>{{ record.first_name }} {{ record.last_name }}</h3>
-          <p>{{ record.assigned_cabin }}</p>
+          <h3>{{ record.message_from }}</h3>
+          <p>{{ record.message_body }}</p>
         </ion-label>
-        <ion-label>
+        <!-- <ion-label>
           <p>{{ record.assigned_phone_number }}</p>
-        </ion-label>
+        </ion-label> -->
       </ion-item>
     </ion-item-sliding>
   </ion-list>
