tasks and messages

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,7 +9,8 @@
 <ion-content>
   <ion-card class="ion-text-center">
     <ion-card-content>
-      <ion-card-title translate>APP_NAME</ion-card-title>
+      <ion-card-title translate>Community Navigator</ion-card-title>
+      <p>2023 Hackathon App</p>
       <p><ion-icon name="code"></ion-icon> <span translate>Version</span> {{ version }}</p>
     </ion-card-content>
   </ion-card>
