--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,1 +1,88 @@
-<p>tasks works!</p>
+<ion-header translucent="true">
+  <ion-toolbar>
+    <ion-buttons *ngIf="!showSearchbar" slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title *ngIf="!ios && !showSearchbar">Tasks</ion-title>
+    <ion-searchbar
+      *ngIf="showSearchbar"
+      showCancelButton="always"
+      [(ngModel)]="queryText"
+      (ionChange)="updateList()"
+      (ionCancel)="showSearchbar = false"
+      placeholder="Search"
+    ></ion-searchbar>
+    <ion-buttons slot="end">
+      <ion-button *ngIf="!ios && !showSearchbar" (click)="showSearchbar = true">
+        <ion-icon slot="icon-only" name="search"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content fullscreen="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Tasks</ion-title>
+    </ion-toolbar>
+    <ion-toolbar>
+      <ion-searchbar [(ngModel)]="queryText" (ionChange)="updateList()" placeholder="Search"></ion-searchbar>
+    </ion-toolbar>
+  </ion-header>
+
+  <ion-list #scheduleList *ngIf="records$ | async as records">
+    <ion-item-sliding *ngFor="let record of records" #slidingItem>
+      <ion-item routerLink="/tasks/details/{{ record._id }}">
+        <ion-label>
+          <h3>{{ record.category }}</h3>
+          <p>{{ record.description }}</p>
+        </ion-label>
+        <ion-label>
+          <p>{{ record.assigned_phone_number }}</p>
+        </ion-label>
+      </ion-item>
+    </ion-item-sliding>
+  </ion-list>
+
+  <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-buttons slot="start">
+            <ion-button (click)="cancel()">Cancel</ion-button>
+          </ion-buttons>
+          <ion-title>Add Client</ion-title>
+          <ion-buttons slot="end">
+            <ion-button (click)="create()" [strong]="true">Confirm</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="ion-padding">
+        <ion-list>
+          <ion-item>
+            <ion-label position="floating">Category</ion-label>
+            <ion-select
+              [(ngModel)]="record.category"
+              label-placement="stacked"
+              label="Select One"
+              placeholder="Select One"
+            >
+              <ion-select-option *ngFor="let c of categories" value="{{ c }}">{{ c }}</ion-select-option>
+            </ion-select>
+          </ion-item>
+
+          <ion-item>
+            <ion-label position="stacked">description</ion-label>
+            <ion-textarea [(ngModel)]="record.description" placeholder="Describe the task"></ion-textarea>
+          </ion-item>
+        </ion-list>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
+
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end" id="open-modal">
+    <ion-fab-button>
+      <ion-icon name="add" (click)="presentAddParticipant()"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+</ion-content>
